                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 20-06-2006 fixed: some language files contained &amp;gt; it should have been &gt; (>)
 - 20-06-2006 updated: Polish language file (Thnx to napek)
 - 20-06-2006 fixed: Typo in swedish strings.xml (Thanks Pike)
 - 20-06-2006 changed: Modified xboxmediacenter.xml and myprograms.xml/myvideos.xml to work with a default XBMC setup
                       ie using the name tags from an untouched xboxmediacenter.xml for the bookmarks in the
                       left hand side of My Videos/My Programs
 - 20-06-2006 updated: Chinese (Simple) language file (Thnx to omenpica)
 - 20-06-2006 updated: Finnish language file (Thnx to jutski)
 - 20-06-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 20-06-2006 updated: Italian language file (Thnx to kotix)
 - 20-06-2006 updated: Norwegian language file (Thnx to vnm)
 - 20-06-2006 updated: Turkish language file (Thnx to necipfazil)
 - 20-06-2006 updated: Spanish language file (Thnx to jose_t)
 - 20-06-2006 updated: Polish language file (Thnx to smuto and the Polish Community Forum)
 - 20-06-2006 added: MPPA Rating to video information dialog.
 - 19-06-2006 changed: updated all language files to the new format and to utf-8 encoding
 - 19-06-2006 fixed: [ 1507612 ] Date & Time will not re-allow entry after set in skin
 - 19-06-2006 changed: forcing mplayer to use utf8 encoding for mkv subtitles
 - 19-06-2006 added: Tool to translate language files, sources in Tools/Translator
 - 19-06-2006 updated: english language to new format
 - 19-06-2006 added: support for a new format of language files (old format can still be read)